<resources>
    <string name="app_name">AreasVolumenes</string>

    <string name="opcion_areas">AREAS</string>
    <string name="opcion_volumenes">VOLÚMENES</string>
    <string name="opcion_operaciones_realizadas">OPERACIONES REALIZADAS</string>

    <string name="cuadrado">CUADRADO</string>
    <string name="rectangulo">RECTANGULO</string>
    <string name="triangulo">TRIANGULO</string>
    <string name="circulo">CIRCULO</string>

    <string name="esfera">ESFERA</string>
    <string name="cilindro">CILINDRO</string>
    <string name="cono">CONO</string>
    <string name="cubo">CUBO</string>

    <string name="titulo_opciones">OPCIONES</string>
    <string name="calcular">Calcular</string>
    <string name="borrar">Borrar</string>
    <string name="resultado">Resultado</string>
    <string name="area">"Area:  "</string>
    <string name="ok">OK</string>

    <string name="valor_lado">Valor del Lado:  </string>
    <string name="valor_base">Valor de la Base</string>
    <string name="valor_altura">Valor de la Altura</string>
    <string name="valor_del_radio">Valor del Radio</string>

    <string name="lado">Lado:   </string>
    <string name="base">Base: </string>
    <string name="altura">Altura: </string>
    <string name="radio">Radio: </string>
    <string name="salto_linea">\n</string>

    <string name="valor_volumen">"Volumen:   "</string>

    <string name="error_valor">Digite un valor</string>
    <string name="ordinal">No.</string>
    <string name="operacion">Operacion</string>
    <string name="datos">Datos</string>
    <string name="operacion_guardada">Operacion Guardada</string>

    <string-array name="opciones">
        <item>@string/opcion_areas</item>
        <item>@string/opcion_volumenes</item>
        <item>@string/opcion_operaciones_realizadas</item>
    </string-array>

    <string-array name="areas">
        <item>@string/cuadrado</item>
        <item>@string/rectangulo</item>
        <item>@string/triangulo</item>
        <item>@string/circulo</item>
    </string-array>

    <string-array name="volumenes">
        <item>@string/esfera</item>
        <item>@string/cilindro</item>
        <item>@string/cono</item>
        <item>@string/cubo</item>
    </string-array>

</resources>
