<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OperacionesRealizadas">

    <TextView
        android:id="@+id/lblOperacionesRealizadas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/opcion_operaciones_realizadas"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TableLayout
        android:id="@+id/tblOperaciones"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <TableRow
            android:id="@+id/flListado"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblOrdinal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ordinal"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblOperacion"
                android:layout_width="139dp"
                android:layout_height="wrap_content"
                android:text="@string/operacion"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblDatos"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/datos"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblResultado"
                android:layout_width="97dp"
                android:layout_height="wrap_content"
                android:text="@string/resultado"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

    </TableLayout>

</LinearLayout>